# exiv2

branches/0.21.1/: CMakeLists.txt
branches/0.21.1/po/: de.po  es.po  exiv2.pot  fi.po  fr.po  pl.po  ru.po  sk.po
branches/0.21.1/src/: basicio.cpp  error.hpp  version.hpp
branches/11/src/: nikonmn.cpp
branches/9.1/src/: nikonmn.cpp
branches/Exiv2-0_6_041212/: Makefile  config.mk.in  configure.ac
branches/Exiv2-0_6_041212/config/: config.mk.in
branches/Exiv2-0_6_041212/doc/: ChangeLog
branches/Exiv2-0_6_041212/src/: Makefile  actions.cpp  exif.hpp  exiv2msvc.h  exv_msvc.h  ifd-test.cpp  ifd.cpp  ifd.hpp  image.cpp  iptc.cpp  types.hpp  utils.cpp  utils.hpp
branches/canonmn-update/src/: tiffparser.hpp
branches/exiv2-tiffparser/src/: Makefile  canonmn.cpp  canonmn.hpp  cr2image.cpp  cr2image.hpp  error.cpp  makernote2.cpp  makernote2.hpp  mrwimage.cpp  nikonmn.cpp  panasonicmn.cpp  panasonicmn.hpp  pngchunk.cpp  rafimage.cpp  sigmamn.cpp  sigmamn.hpp  tags.cpp  tags.hpp  tiff-test.cpp  tiffaddpath-test.cpp  tiffcomposite.cpp  tiffcomposite.hpp  tifffwd.hpp  tiffimage.cpp  tiffimage.hpp  tiffmn-test.cpp  tiffparser.cpp  tiffparser.hpp  tiffvisitor.cpp  tiffvisitor.hpp
branches/gettext/config/: config.h.in  config.mk.in  configure.ac
branches/gettext/kdevelop/: exiv2.kdevelop
branches/gettext/po/: Exiv2.pot  POTFILES.in  de.po  es.po  fr.po  pl.po
branches/gettext/src/: actions.cpp  datasets.cpp  error.cpp  exiv2.cpp  fujimn.cpp  fujimn.hpp  i18n.h  ifd.cpp  minoltamn.cpp  minoltamn.hpp  nikonmn.cpp  nikonmn.hpp  olympusmn.cpp  olympusmn.hpp  panasonicmn.cpp  panasonicmn.hpp  pngchunk.cpp  sigmamn.cpp  sonymn.cpp  tags.cpp  tags.hpp  tiffimage.cpp  tiffvisitor.cpp  types.cpp
branches/gsoc13/: CMakeLists.txt  Makefile  configure  jenkins_build.bat  jenkins_build.sh
branches/gsoc13-abhinav/: Makefile
branches/gsoc13-abhinav/config/: Makefile.in  config.mk.in
branches/gsoc13-abhinav/doc/: Makefile
branches/gsoc13-abhinav/msvc/: runner7.txt
branches/gsoc13-abhinav/msvc64/: ReadMe.txt  exiv2.sln
branches/gsoc13-abhinav/samples/: CMakeLists.txt  Makefile  httptest.cpp  metacopy.cpp  metacopy.hpp  path-test.cpp  taglist.cpp  tiff-test.cpp
branches/gsoc13-abhinav/src/: CMakeLists.txt  Makefile  actions.cpp  basicio.cpp  basicio.hpp  canonmn.cpp  cr2image.cpp  crwimage.cpp  easyaccess.cpp  exif.cpp  exiv2.1  exiv2.cpp  exiv2app.hpp  http.cpp  http.hpp  image.cpp  jp2image.cpp  minoltamn.cpp  nikonmn.cpp  olympusmn.cpp  olympusmn_int.hpp  orfimage.cpp  pentaxmn.cpp  pngimage.cpp  properties.cpp  rcsid_int.hpp  samsungmn.cpp  tags_int.hpp  tiffcomposite.cpp  tiffimage.cpp  tiffvisitor.cpp  types.hpp  value.cpp  version.cpp  version.hpp
branches/gsoc13-abhinav/test/: Makefile
branches/gsoc13/config/: Makefile.in  config.h.cmake
branches/gsoc13/contrib/: farmer.cpp
branches/gsoc13/msvc2003/: ReadMe.txt  exiv2.sln
branches/gsoc13/msvc2005/: ReadMe.txt  build.bat  exiv2.sln  exiv2.vsprops
branches/gsoc13/samples/: CMakeLists.txt  Makefile  addmoddel.cpp  exifprint.cpp  geotag.d  metacopy.cpp  metacopy.d  path-test.cpp  path-test.d  taglist.cpp
branches/gsoc13/src/: CMakeLists.txt  Makefile  actions.cpp  basicio.cpp  bmpimage.cpp  cr2image.cpp  crwimage.cpp  epsimage.cpp  error.cpp  exif.cpp  exiv2.1  exiv2.cpp  futils.cpp  gifimage.cpp  http.cpp  image.cpp  jp2image.cpp  jpgimage.cpp  makernote.cpp  mrwimage.cpp  orfimage.cpp  pgfimage.cpp  pngchunk.cpp  preview.cpp  rafimage.cpp  rw2image.cpp  ssh.cpp  taglist  tgaimage.cpp  tiffcomposite.cpp  tiffimage.cpp  tiffvisitor.cpp  utils.cpp  version.cpp  xmpsidecar.cpp
branches/gsoc13/test/: Makefile  curliotest.sh  functions.source  httpiotest.sh  iotest.sh  testMSVC.sh  xpathiotest.sh
branches/gsoc2012/src/: CMakeLists.txt  Makefile  asfvideo.cpp  asfvideo.hpp  image.cpp  matroskavideo.cpp  matroskavideo.hpp  properties.cpp  quicktimevideo.cpp  quicktimevideo.hpp  riffvideo.cpp  riffvideo.hpp  tags_int.hpp
branches/gsoc2012/test/: video-test.sh
branches/gsoc2013-videow/src/: quicktimevideo.cpp  quicktimevideo.hpp  riffvideo.cpp  riffvideo.hpp  tags_int.hpp
branches/insideout/msvc/: exiv2.sln
branches/insideout/src/: Makefile  actions.cpp  basicio.cpp  basicio.hpp  dataarea-test.cpp  exif.cpp  image.cpp  image.hpp  iotest.cpp  iptc.cpp  jpgimage.cpp  jpgimage.hpp  metacopy.cpp  types.hpp
branches/insideout/test/: iotest.sh  iptctest.sh
branches/jenkins/: jenkins_build.sh
branches/jenkins/src/: Makefile
branches/orf/src/: cr2image.cpp  image.cpp  mrwimage.cpp  orfimage.cpp  orfimage.hpp  pngchunk.cpp  tifffwd.hpp  tiffimage.cpp  tiffparser.cpp  (+1 more)
branches/unstable/: CMakeLists.txt  README-cmake  Todo-cmake.txt  Todo.cmake
branches/unstable/config/: ConfigureChecks.cmake  config.h.cmake
branches/unstable/msvc/: README-MSVC.txt  exiv2+organize.sln  exiv2.sln
branches/unstable/msvc/exiv2lib/: exiv2lib.vcproj
branches/unstable/msvc/include/: exv_msvc.h
branches/unstable/samples/: Makefile  addmoddel.cpp  exifdata-test.cpp  iptctest.cpp  key-test.cpp  mmap-test.cpp  tiff-test.cpp  write-test.cpp  write2-test.cpp  xmpsample.cpp
branches/unstable/src/: CMakeLists.txt  Makefile  actions.cpp  actions.hpp  basicio.cpp  basicio.hpp  canonmn.cpp  canonmn.hpp  convert.cpp  cr2image.cpp  cr2image.hpp  crwimage.cpp  datasets.cpp  datasets.hpp  easyaccess.cpp  error.cpp  exif.cpp  exif.hpp  exiv2.cpp  exiv2.hpp  exiv2app.hpp  exv_msvc.h  fujimn.cpp  fujimn.hpp  futils.cpp  image.cpp  image.hpp  iptc.cpp  iptc.hpp  jp2image.cpp  jp2image.hpp  jpgimage.cpp  jpgimage.hpp  key.cpp  key.hpp  key1-test.cpp  makernote.cpp  makernote2.cpp  makernote2.hpp  makernote2_int.hpp  (+57 more)
branches/unstable/test/: Makefile  bugfixes-test.sh  tiff-test.sh
branches/unstable/test/data/: bugfixes-test.out  exifdata-test.out  exiv2-test.out  modify-test.out  tiff-test.out  write-test.out  write2-test.out
branches/unstable/xmpsdk/: CMakeLists.txt
branches/webready/: Makefile  jenkins_build.bat  jenkins_build.sh
branches/xmp/: README-XMP
tags/0.6.1/: config_win32.h
team/drawings/: Exiv2CloudReady.graffle
(+337 files in other folders)
